# drawcustom

./: .release-please-config.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: generate-screenshots.yml  lint.yml  release.yml  test.yml
examples/: advanced_layout.py  basic_usage.py  http_images.py  material_icons.py  qr_codes.py
scripts/: generate_screenshots.py
src/drawcustom/: __init__.py  colors.py  core.py  types.py
src/drawcustom/elements/: icons.py  text.py  visualizations.py
src/odl_renderer/: __init__.py  colors.py  coordinates.py  fonts.py  media_loader.py  registry.py  types.py
src/odl_renderer/assets/: materialdesignicons-webfont_meta.json
src/odl_renderer/elements/: debug.py  icons.py  media.py  shapes.py  text.py  visualizations.py
tests/: builders.py  conftest.py
tests/integration/: test_api.py  test_core_advanced.py  test_debug.py  test_icons.py  test_media.py  test_multi_element.py  test_plot.py  test_qrcodes.py  test_rectangles.py  test_shapes.py  test_text.py  test_text_advanced.py  test_visualizations_advanced.py
tests/property/: test_color_properties.py  test_coordinate_properties.py  test_image_generation_properties.py
tests/unit/: test_builders.py  test_colors.py  test_coordinates.py  test_fonts.py  test_media_loader.py  test_text_color_parsing.py
tests/visual/: test_layouts.py  test_plot_rendering.py  test_qrcode_rendering.py  test_shape_rendering.py  test_text_rendering.py
