[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odl-renderer"
version = "0.5.0"
description = "Pure image rendering from drawing instructions for e-paper displays"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "g4bri3lDev", email = "admin@g4bri3l.de"}
]
keywords = ["e-paper", "eink", "image", "rendering", "odl", "opendisplay", "open-display-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Pillow>=12.0.0",
    "qrcode[pil]>=7.4.2",
    "aiohttp>=3.13.4",
    "resize-image>=0.4.0"
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "time-machine>=2.9.0",
]

visual = [
    "syrupy>=5.1.0",
    "imagehash>=4.3.2"
]

property = [
    "hypothesis>=6.151.12"
]

dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.10",
    "prek>=0.3.4",
]
[project.urls]
Homepage = "https://github.com/g4bri3lDev/odl-renderer"
Repository = "https://github.com/g4bri3lDev/odl-renderer"
Issues = "https://github.com/g4bri3lDev/odl-renderer/issues"
Documentation = "https://opendisplay.org/protocol/open-display-language.html"

[tool.hatch.build.targets.wheel]
packages = ["src/odl_renderer"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
